Stop using sun.reflect.Reflection on modern Java environments